obvious bugs squashed

--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@
     background-color: #81c784;
     align-items: flex-start;
   }
+  .header-content{
+
+    border-radius: 15px;
+  }
 }
 @media screen and (max-width: 600px) {
   .App{
