--- a/src/Layouts/MainContent/MusicBox.css
+++ b/src/Layouts/MainContent/MusicBox.css
@@ -14,6 +14,8 @@
 }
 
 .playarea {
+  margin-top: 10px;
+  padding:10px;
   align-items: center;
   justify-content: center;
   border-radius: 20px;
